test/unit/cxtm/jtm/invalid/instance_of.jtm
{"version":"1.0",
  "item_type":"topicmap",
  "topics":[
            {"item_identifiers":["#xtm"],
             "instance_of": ["ii:#format"]
            }
           ]
}
